deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-conversion
spec:
  type: NodePort 
  selector:
    app: api-conversion
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 32000  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-conversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-conversion
  template:
    metadata:
      labels:
        app: api-conversion
    spec:
      containers:
        - name: api-conversion
          image: juanpareygonz/conversion-unit-api:latest
          imagePullPolicy: Never  
          ports:
            - containerPort: 8081
