deploy-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-conversion
spec:
  type: ClusterIP
  selector:
    app: api-conversion
  ports:
    - port: 80
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-conversion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-conversion
  template:
    metadata:
      labels:
        app: api-conversion
    spec:
      containers:
        - name: api-conversion
          image: juanpareygonz/conversion-unit-api:latest
          imagePullPolicy: Never  
          ports:
            - containerPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-conversion-ingress
spec:
  rules:
    - host: api-conversion.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-conversion
                port:
                  number: 80
